--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -160,6 +160,19 @@
           &:last-child
             margin-bottom: 0
 
+  .community_size-intro
+    @extend .blend-bottom
+
+    p
+      text-align: center
+
+      &.first
+        line-height: 1.4
+        font-size: 24px
+
+      &.second
+        font-size: 14px
+
   .question.community_size
     @extend .blend-bottom
 
@@ -169,9 +182,9 @@
         cursor: pointer
         float: left
         text-align: center
-        margin: 0 2.5%
-        padding: 2em 0
-        width: 20%
+        margin: 0
+        padding: 2em 2.5%
+        width: 25%
         @include transition(color .2s)
 
         input,
@@ -218,23 +231,11 @@
           background-position: -1420px 0
 
         &:hover
+          background: #eee
           color: $dark
 
           .icon:after
             opacity: 1
-
-  .community_size-intro
-    @extend .blend-bottom
-
-    p
-      text-align: center
-
-      &.first
-        line-height: 1.4
-        font-size: 24px
-
-      &.second
-        font-size: 14px
 
   .community_data
     @extend .blend-top
@@ -249,6 +250,7 @@
 
       span
         display: block
+        font-family: $proxima-semibold
         font-size: 16px
 
     p
