--- a/css/sass/_chapter4.sass
+++ b/css/sass/_chapter4.sass
@@ -65,11 +65,11 @@
     h2
       font-size: 42px
 
-  .colleges_see_graying_workforce
+  .how_big_a_boost
     @extend .left
 
-    .contents
-      padding-top: 1em
+  .colleges_see_graying_workforce
+    @extend .right
 
     h2
       padding-top: 0
