--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -108,7 +108,7 @@ header.story_header
     z-index: 3
 
   p
-    background: image-url('pbs-logo-dark.png') top no-repeat
+    background: image-url('pbs-logo-white.png') top no-repeat
     color: #fff
     margin-bottom: $line*1.25
     padding-top: 55px
@@ -122,33 +122,42 @@ header.story_header
     display: none
 
   h1
-    @include text-shadow($dark 0 0 25px)
     color: #fff
-    font-size: $font-size*3.6
-    margin: 4em 0 $line/4
+    margin: 8em 0 $line/4
     word-spacing: -$line/2
 
     em
-      font-family: 'BodoniW01-PosterItalic', serif
-      font-size: $font-size*6.5
+      font-family:  $bodoni-poster-italic
+      font-size: $font-size*5
       font-style: normal
       margin: 0
       padding: 0 $line/8
+      @include text-shadow($dark 0 0 15px, $dark 0 0 15px)
 
     small
-      font-family: 'Adobe Caslon W01 Bd It', serif
+      display: block
+      font-family: $caslon-bold-italic
       font-size: $font-size*2.3
       font-style: normal
+      margin: .25em auto
       padding: 0 $line/10
       text-transform: lowercase
       vertical-align: $line/3
+      width: 840px
+      @include text-shadow($dark 0 0 15px, $dark 0 0 15px)
 
-  &.bordered
-    hr
-      display: block
+      &:before,
+      &:after
+        content: ""
+        border-bottom-width: 4px
+        border-bottom-style: solid
+        border-bottom-color: #fff
+        position: absolute
+        top: 50%
+        width: 45%
+      
+      &:before
+        left: 0
 
-    h1
-      margin-top: -$line*1.8
-
-      em
-        background: #fff
+      &:after
+        right: 0
