Fixed quotation author images on background images.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -240,7 +240,7 @@ section
       background-image: image-url('person-dante_chinni.jpg')
 
     &.jack_vanderhei .contents
-      background-image: image-url('person-jack_vanderhei.jpg')
+      background-image: image-url('person-jack_vanderhei.png')
 
     &.julie_zissimopoulos .contents
       background-image: image-url('person-julie_zissimopoulos.jpg')
@@ -249,7 +249,7 @@ section
       background-image: image-url('person-marc_freedman.jpg')
 
     &.michael_davidson .contents
-      background-image: image-url('person-michael_davidson.jpg')
+      background-image: image-url('person-michael_davidson.png')
 
     &.diane_oakley .contents
       background-image: image-url('person-diane_oakley.jpg')
@@ -258,7 +258,7 @@ section
       background-image: image-url('person-nancy_goldberg.jpg')
 
     &.paula_gjerstad .contents
-      background-image: image-url('person-paula_gjerstad.jpg')
+      background-image: image-url('person-paula_gjerstad.png')
 
     &.robert_martin .contents
       background-image: image-url('person-robert_martin.jpg')
@@ -267,7 +267,7 @@ section
       background-image: image-url('person-sheryl_garrett.jpg')
 
     &.traer_sunley .contents
-      background-image: image-url('person-traer_sunley.jpg')
+      background-image: image-url('person-traer_sunley.png')
 
   &.video
     .contents
