--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -135,6 +135,9 @@
           blockquote
             float: right
 
+        &.paula_gjerstad
+          margin: 4em 0
+
   .men_and_women
     @extend .spread
 
